--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Tinder for devs",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon src/app.js"
+    "start:dev": "nodemon app.js"
   },
   "author": "Sairam",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.2",
+    "validator": "^13.15.15"
   }
 }
